# advent_of_code

./: .gitignore  .gitmodules  Cargo.toml  cspell.json
aoc2023/: Cargo.toml
aoc2023/.cargo/: config.toml
aoc2023/day01/: Cargo.toml
aoc2023/day01/src/: aocerror.rs  part1.rs  part2.rs
aoc2023/day02/src/: aocerror.rs  lib.rs  parse.rs
aoc2023/day03/src/: aocerror.rs  lib.rs
aoc2023/day04/: Cargo.toml
aoc2023/day04/src/: aocerror.rs  lib.rs
aoc2023/day05/src/: aocerror.rs  part1.rs  part2.rs
aoc2023/day06/: Cargo.toml
aoc2023/day06/src/: aocerror.rs  lib.rs  part1.rs  part2.rs
aoc2023/day07/src/: part1.rs  part2.rs
aoc2023/day08/src/: aocerror.rs  lib.rs
aoc2023/day09/: Cargo.toml
aoc2023/day09/src/: aocerror.rs  lib.rs
aoc2023/day10/src/: aocerror.rs  lib.rs
aoc2023/day11/src/: lib.rs
aoc2023/day12/: Cargo.toml
aoc2023/day13/src/: lib.rs
aoc2023/day14/src/: aocerror.rs  lib.rs
aoc2023/day15/src/: aocerror.rs  lib.rs
aoc2023/day16/src/: lib.rs
aoc2023/day17/src/: aocerror.rs  lib.rs
aoc2023/day18/: Cargo.toml
aoc2023/day18/src/: part1.rs  part2.rs
aoc2023/day19/: Cargo.toml
aoc2023/day19/src/: lib.rs
aoc2023/day20/: Cargo.toml
aoc2023/day20/src/: aocerror.rs  lib.rs  progress.rs
aoc2023/day21/: Cargo.toml
aoc2023/day21/src/: aocerror.rs  lib.rs
aoc2023/day22/: Cargo.toml
aoc2023/day22/src/: aocerror.rs  lib.rs
aoc2023/day23/: Cargo.toml
aoc2023/day23/src/: aocerror.rs  lib.rs
aoc2023/day24/: Cargo.toml
aoc2023/day24/.cargo/: config.toml
aoc2023/day24/src/: aocerror.rs  lib.rs
aoc2023/day25/: Cargo.toml  base.dot  condensed.dot
aoc2023/day25/src/: lib.rs  progress.rs
aoc2023/day_template/src/: lib.rs  progress.rs
aoc2024/: Cargo.toml
aoc2024/common/src/: error.rs  input.rs
aoc2024/day01/: Cargo.toml
aoc2024/day02/: Cargo.toml
aoc2024/day04/: Cargo.toml
aoc2024/day07/: Cargo.toml
aoc2024/day10/: Cargo.toml
aoc2024/day11/: Cargo.toml
aoc2024/day11/src/: part2_log.rs  part2_vec.rs
aoc2024/day14/: Cargo.toml
aoc2024/day16/: Cargo.toml
aoc2024/day18/: Cargo.toml
aoc2024/day19/src/: parse.rs
aoc2024/day20/: Cargo.toml
aoc2024/day20/src/: part2.rs  part2_combination.rs
aoc2024/day21/: Cargo.toml
aoc2024/day22/: Cargo.toml
aoc2024/day23/: Cargo.toml
aoc2024/day23/src/: part2.rs
aoc2024/day24/: Cargo.toml
aoc2024/day25/: Cargo.toml
aoc2024/template/: Cargo.toml
aoc2025/: Cargo.toml
aoc2025/common/src/: error.rs  input.rs
aoc2025/day01/: Cargo.toml
aoc2025/day01/benches/: bench.rs
aoc2025/day01/src/: lib.rs  main.rs  parse.rs  part1.rs  part2.rs  part2_euclid.rs
aoc2025/day02/: Cargo.toml
aoc2025/day02/benches/: bench.rs
aoc2025/day02/src/: lib.rs  main.rs  parse.rs  part1.rs  part1_chrisbiscardi_ref.rs  part1_chrisbiscardi_skip.rs  part2.rs
aoc2025/day03/: Cargo.toml
aoc2025/day03/benches/: bench.rs
aoc2025/day03/src/: lib.rs  main.rs  parse.rs  part1.rs  part2.rs  part2_ascii.rs  part2_tail.rs
aoc2025/day04/: Cargo.toml
aoc2025/day04/benches/: bench.rs
aoc2025/day04/src/: lib.rs  main.rs  parse.rs  part1.rs  part1_rayon.rs  part2.rs  part2_floodfill.rs
aoc2025/day05/: Cargo.toml
aoc2025/day05/benches/: bench.rs
aoc2025/day05/src/: lib.rs  main.rs  parse.rs  part1.rs  part2.rs  part2_custom.rs  part2_rangemap.rs  part2_sort.rs
aoc2025/day06/: Cargo.toml
aoc2025/day06/benches/: bench.rs
aoc2025/day06/src/: lib.rs  main.rs  parse.rs  part1.rs  part2.rs  part2_left_right.rs
aoc2025/day07/: Cargo.toml
aoc2025/day07/benches/: bench.rs
aoc2025/day07/src/: lib.rs  main.rs  parse.rs  part1.rs  part2.rs  part2_chunk.rs  part2_direct.rs
aoc2025/day08/: Cargo.toml
aoc2025/day08/benches/: bench.rs
aoc2025/day08/src/: lib.rs  main.rs  parse.rs  part1.rs  part2.rs  part2_indexed.rs  part2_par_sort.rs  part2_vec_indexed.rs  part2_vec_sort.rs
aoc2025/day09/: Cargo.toml
aoc2025/day09/benches/: bench.rs
aoc2025/day09/src/: lib.rs  main.rs  parse.rs  part1.rs  part1_i64.rs  part2.rs  part2_bin_heap.rs  part2_rayon.rs  part2_sort.rs
aoc2025/day10/: Cargo.toml
aoc2025/day10/benches/: bench.rs
aoc2025/day10/src/: lib.rs  main.rs  parse.rs  part1.rs  part1_bitvec.rs  part2.rs  part2_gaussian.rs  part2_good_lp.rs  part2_smart.rs  part2_z3.rs  part2_z3_optimize.rs
aoc2025/day10/src/tools/: matrix.rs
aoc2025/day11/: Cargo.toml
aoc2025/day11/benches/: bench.rs
aoc2025/day11/src/: main.rs  parse.rs  part1.rs  part2.rs
aoc2025/day12/: Cargo.toml
aoc2025/day12/benches/: bench.rs
aoc2025/day12/src/: main.rs  parse.rs  part1.rs
aoc2025/template/: Cargo.toml
aoc2025/template/src/: main.rs  parse.rs  part1.rs  part2.rs
common/: Cargo.toml
common/src/: error.rs  position.rs
day01/: Cargo.toml
day01/src/: aocerror.rs  part1.rs
day02/: Cargo.toml
day02/src/: aocerror.rs  parse.rs
day03/: Cargo.toml
day03/src/: aocerror.rs  lib.rs
day04/: Cargo.toml
day04/src/: aocerror.rs
day05/: Cargo.toml
day05/src/: aocerror.rs
day06/: Cargo.toml
day06/src/: part2.rs
day07/: Cargo.toml
day07/src/: aocerror.rs  part1.rs  part2.rs
day08/: Cargo.toml
day08/src/: aocerror.rs  lib.rs
day09/: Cargo.toml
day10/: Cargo.toml
day10/src/: aocerror.rs
day11/: Cargo.toml
day11/src/: lib.rs
day12/: Cargo.toml
day12/src/: lib.rs
day13/: Cargo.toml
day13/src/: lib.rs
day14/: Cargo.toml
day14/src/: lib.rs
day15/: Cargo.toml
day15/src/: aocerror.rs  lib.rs
day16/: Cargo.toml
day17/: Cargo.toml
day18/: Cargo.toml
day18/src/: lib.rs  part1.rs  part2.rs
day19/: Cargo.toml
day19/src/: aocerror.rs  lib.rs
day20/: Cargo.toml
day20/src/: lib.rs  parse.rs  progress.rs
day21/: Cargo.toml
day21/src/: lib.rs  part1.rs
day22/: Cargo.toml
day22/src/: aocerror.rs  lib.rs  progress.rs
day23/: Cargo.toml
day23/src/: lib.rs  part1.rs  part2_optimize.rs
day24/: Cargo.toml
day24/src/: lib.rs  machine.rs
day25/: Cargo.toml
day25/src/: aocerror.rs  lib.rs
day_template/: Cargo.toml
day_template/src/: aocerror.rs  lib.rs
