[workspace]
resolver = "2"
members = ["day*"]

[workspace.dependencies]
regex = "1.10.2"
thiserror = "1.0.56"
miette = "5.10.0"
owo-colors = "4.0.0"
nom = "7.1.3"
nom_locate = "4.2.0"
rayon = "1.8.1"
itertools = "0.12.0"
num = "0.4.1"
# petgraph
# pathfinding
# ndarray ndarray-linearalg

[workspace.lints.clippy]
result_large_err = "allow"
