[package]
name = "day12"
version = "0.1.0"
edition.workspace = true

[dependencies]
common = { path = "../common" }
anyhow = { workspace = true }
clap = { workspace = true }
winnow = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
divan = { workspace = true }

[[bench]]
name = "bench"
harness = false
