[package]
name = "day19"
version = "0.1.0"
edition.workspace = true

[dependencies]
common = { path = "../common" }
clap = { workspace = true }
winnow = { workspace = true }
miette = { workspace = true }
rustc-hash.workspace = true
cached = { version = "0.54.0" }

[dev-dependencies]
divan = { workspace = true }

[[bench]]
name = "bench"
harness = false
