[package]
name = "day23"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
petegraph = []

[dependencies]
regex = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
# owo-colors = { workspace = true }
chumsky = { workspace = true }
ariadne = { workspace = true }
num = { workspace = true }
petgraph = "0.6.4"
# nom = { workspace = true }
# nom_locate = { workspace = true }

[lints]
workspace = true
