[package]
name = "day25"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = []

[dependencies]
thiserror = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
chumsky = { workspace = true }
ariadne = { workspace = true }
num = { workspace = true }
petgraph = "0.6.4"
rustworkx-core = "0.14.0"

[lints]
workspace = true
