[package]
name = "day05"
version = "0.1.0"
edition.workspace = true

[dependencies]
common = { path = "../common" }
clap = { workspace = true }
winnow = { workspace = true }
miette = { workspace = true }
rangemap = "1.7.0"

[dev-dependencies]
divan = { workspace = true }
rstest = { workspace = true }

[[bench]]
name = "bench"
harness = false
