[package]
name = "day07"
version = "0.1.0"
edition.workspace = true

[dependencies]
common = { path = "../common" }
clap = { workspace = true }
miette = { workspace = true }
num = { workspace = true }

[dev-dependencies]
divan = { workspace = true }
rstest = { workspace = true }

[[bench]]
name = "bench"
harness = false
